KubernetesMeshIstio/03-03/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mtls-gateway
  namespace: mtls
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - hostname.mtls.com
    port:
      name: http
      number: 80
      protocol: HTTP
